--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="member"><img src='https://i.postimg.cc/Jyv4V9zK/Business-Card-Sep-13-2020.png' border='0' alt='image'/></a>
 		 
 		  <h2>Pavithra J</h2>
-		  <p>Electrical and Electronic Engineer studing at R.M.K Engineering college.<br>Topper in the department.<br>Topper in the department</p>
+		  <p>Electrical and Electronic Engineer studing at R.M.K Engineering college.<br>Topper in the department.</p>
 		</div>
 		<div class="member">
 			<img src='https://i.postimg.cc/d71mSThr/IMG-20200917-214504.jpg' border='0' alt='IMG'/>
